--- a/P2/style.css
+++ b/P2/style.css
@@ -6,23 +6,20 @@ body {
     font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-h1 {
-    text-align: center;
-}
-
-h2,
-h3 {
-    margin-bottom: 2px;
-}
-
 body > header > p {
     font-size: 24px;
     text-align: center;
 }
 
 h1 {
+    text-align: center;
     font-size: 3em;
     margin-bottom: 0;
+}
+
+h2,
+h3 {
+    margin-bottom: 2px;
 }
 
 h2 {
@@ -35,10 +32,11 @@ section > header {
 
 section {
     font-size: 18px;
+    margin: 20px 0;
 }
 
 li {
-    margin-bottom: 15px;
+    margin-top: 5px;
 }
 
 table {
@@ -58,4 +56,10 @@ th {
 figcaption {
     font-size: 15px;
     text-align: center;
+    margin-top: 7px;
+}
+
+img {
+    display: block;
+    margin: auto;
 }
