--- a/website/master.css
+++ b/website/master.css
@@ -64,7 +64,7 @@ h2 {
 
 .popupBody {
     background-color: #0b1622;
-    padding: 30px;
+    padding: 60px 30px;
     border-radius: 0 0 20px 20px;
 }
 
