--- a/website/master.css
+++ b/website/master.css
@@ -44,7 +44,7 @@ h2 {
 
 #popup {
     position: fixed;
-    width: 700px;
+    width: 50%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -69,14 +69,18 @@ h2 {
 }
 
 .popupThumbnail {
-    float: left;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     margin-right: 30px;
+    width: 200px;
 }
 
 .popupDescription {
+    display: inline-block;
+    vertical-align: middle;
     margin: 0;
     font-size: 18px;
+    width: 70%;
 }
 
 .popupX {
