--- a/website/master.css
+++ b/website/master.css
@@ -44,13 +44,21 @@ h2 {
 
 #popup {
     position: fixed;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#popupContent {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.popupHeader {
+#popupHeader {
     background-color: #353535;
     margin: 0;
     padding: 10px;
@@ -58,24 +66,24 @@ h2 {
     border-radius: 20px 20px 0 0;
 }
 
-.popupHeader h3 {
+#popupHeader h3 {
     margin: 0;
 }
 
-.popupBody {
+#popupBody {
     background-color: #0b1622;
     padding: 60px 30px;
     border-radius: 0 0 20px 20px;
 }
 
-.popupThumbnail {
+#popupThumbnail {
     display: inline-block;
     vertical-align: middle;
     margin-right: 30px;
     width: 200px;
 }
 
-.popupDescription {
+#popupDescription {
     display: inline-block;
     vertical-align: middle;
     margin: 0;
@@ -83,7 +91,7 @@ h2 {
     width: 70%;
 }
 
-.popupX {
+#popupX {
     position: absolute;
     width: 40px;
     height: 40px;
@@ -96,13 +104,13 @@ h2 {
     top: -20px;
 }
 
-.popupX span {
+#popupX span {
     position: relative;
     top: 3px;
     vertical-align: middle;
 }
 
-.popupX:hover {
+#popupX:hover {
     background-color: #d0d0d0;
     cursor: pointer;
 }
