--- a/website/css/master.css
+++ b/website/css/master.css
@@ -10,7 +10,12 @@ body {
     font-size: 20px;
     font-weight: 100;
     margin: 0;
+    overflow-y: scroll;
     /*padding: 5%;*/
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .content {
@@ -70,7 +75,7 @@ h2 {
 
 .nav-links > a {
   display: inline-block;
-  padding: 30px 50px ;
+  padding: 28px 50px ;
   text-decoration: none;
   color: #d9d9d9;
   float: left;
@@ -322,8 +327,52 @@ h2 {
 .animeEpisodes { /* How on earth can I center this? */
   margin: auto;
   font-size: larger;
-} 
+}
 
 *[onclick]:hover {
   background-color: #202020;
+}
+
+/*Styling for voting-page*/
+#infobox {
+  width: 70%;
+  margin: auto;
+}
+
+.voting_wrapper {
+  margin-top: 40px;
+}
+
+.voting_container {
+  padding: 0;
+}
+
+.voting_element {
+  width: 70%;
+  margin: auto;
+  padding: 10px;
+  background-color: #1f293c;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
+  list-style: decimal;
+  cursor: move;
+}
+
+li:active {
+  opacity: 0.7;
+}
+
+.voting_button {
+  text-align: center;
+}
+
+#voting_btn {
+  font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  background-color: #d9d9d9;
+  color: #1f293c;
+  border-radius: 6px;
 }
