--- a/website/css/master.css
+++ b/website/css/master.css
@@ -376,3 +376,99 @@ li:active {
   color: #1f293c;
   border-radius: 6px;
 }
+
+/*Newsfeed Styling*/
+.newsfeed_container {
+  width: 70%; 
+  margin: auto;
+}
+
+.newsfeed_title {
+  text-align: left; 
+  margin: 25px 0 0 0;
+}
+
+.newsfeed_hr {
+  border-top: 2px solid #d9d9d9;
+}
+
+/*Signup Styling*/
+#signup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+#signupContainer {
+  position: fixed;
+  width: 23%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+#signupHead {
+  background-color: #353535;
+  margin: 0;
+  padding: 10px;
+  border-radius: 20px 20px 0 0;
+}
+
+#signupHeader {
+  text-align: center;
+  margin: 10px;
+}
+
+#signupBody {
+  background-color: #1F293C;
+  margin: 0;
+  padding: 10px 0;
+  border-radius: 0 0 20px 20px;
+}
+
+.inputContainer {
+  position: relative;
+  margin: auto;
+  margin: 70px 0;
+  text-align: center;
+}
+
+.signupIcon {
+  box-sizing: border-box;
+  position: absolute;
+  color: #353535 ;
+  height: 44px;
+  padding: 10px;
+  text-align: center;
+}
+
+.inputBox {
+  box-sizing: border-box;
+  height: 44px;
+  padding: 10px;
+  width: 85%;
+  outline: none;
+  text-align: center;
+}
+
+#signupSubmit {
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 40px;
+}
+
+#signupSuccessful {
+  display: inline-block;
+  padding: 10px 0;
+}
+
+#signupClose {
+  position: absolute;
+  color: #c4c4c4;
+  top: -5px;
+  right: -5px;
+}
