--- a/website/css/master.css
+++ b/website/css/master.css
@@ -1,6 +1,6 @@
 html {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .content {
@@ -33,172 +33,169 @@ h2 {
 
 /*CSS for navbar*/
 #navbar {
-  margin: 0;
-  height: 83px;
-  background-color: #353535;
+    margin: 0;
+    height: 83px;
+    background-color: #353535;
 }
 
 .nav-items {
-  height: auto;
-  width: 100%;
-  box-sizing: border-box;
-  top: 0;
-  z-index: 500;
+    height: auto;
+    width: 100%;
+    box-sizing: border-box;
+    top: 0;
+    z-index: 500;
 }
 
 .nav-header {
-  display: inline;
+    display: inline;
 }
 
 .nav-title {
-  display: inline-block;
-  height:100%;
-  padding: 11px 50px;
-  /*border-right: 1px solid #d9d9d9;*/
-  border-spacing: 0;
-  text-decoration: none;
-
+    display: inline-block;
+    height: 100%;
+    padding: 11px 50px;
+    /*border-right: 1px solid #d9d9d9;*/
+    border-spacing: 0;
+    text-decoration: none;
 }
-.nav-title:hover{
+.nav-title:hover {
     background-color: #202020;
     height: 100%;
 }
 
 .nav-sandwhichbtn {
-  display: none;
+    display: none;
 }
 
 .nav-links {
-  display: inline;
-  float: right;
+    display: inline;
+    float: right;
 }
 
 .nav-links > a {
-  display: inline-block;
-  padding: 28px 50px ;
-  text-decoration: none;
-  color: #d9d9d9;
-  float: left;
+    display: inline-block;
+    padding: 28px 50px;
+    text-decoration: none;
+    color: #d9d9d9;
+    float: left;
 }
 
 .nav-links > a:hover {
-  background-color: #202020;
+    background-color: #202020;
 }
 
 .discord-link > a {
-  display: none;
+    display: none;
 }
 
 #nav-check {
-  display: none;
+    display: none;
 }
 
-#navbar-logo{
+#navbar-logo {
     height: 61px;
     float: left;
-  }
-
-@media (max-width:1100px) {
-.nav-sandwhichbtn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
-
-.nav-sandwhichbtn > label {
-    display: inline-block;
-    height: 83px;
-    padding: 10px 20px;
-    box-sizing: border-box;
-  }
-
-.nav-sandwhichbtn > label:hover {
-    height: 83px;
-    background-color: #202020;
-  }
-
-.nav-sandwhichbtn > label > span {
-    display: block;
-    width: 40px;
-    margin: 16px;
-    border-top: 6px solid #d9d9d9;
-    border-radius: 4px;
-  }
-
-  #navbar-discord-logo {
-      display: none;
-  }
-
-.nav-links {
-    display: block;
-    width: 100%;
-    background-color: #353535;
-    transition: all 0.5s ease-in;
-    overflow-x: hidden;
-    left: 0px;
-    text-align: center;
-    z-index: 500;
-  }
-
-.nav-links > a {
-    display: block;
-    width: 100%;
-    padding: 30px 0px;
-  }
-
-.discord-link > a {
-    display: inline-block;
-    width: 100%;
-    text-decoration: none;
-    color: #d9d9d9;
-    padding: 30px 0px;
-    background-color: #1F293C;
 }
 
-#nav-check:checked + .nav-links {
-     display: block;
-     height: calc(37vh - 75px);
-     overflow-x: hidden;
-   }
-
-@media (max-width:600px) {
-
-  #navbar {
-    height: 80px;
-  }
-
-  .nav-title{
-    font-size: 11px;
-    padding: 10px 20px;;
-  }
-}
-
-.nav-sandwhichbtn {
-    right: 8px;
-    top: 8px;
-  }
-
-.nav-sandwhichbtn > label {
-    height: 80px;
-    padding: 0px;
-  }
-
-  .nav-sandwhichbtn > label:hover {
-      height: 80px;
+@media (max-width: 1100px) {
+    .nav-sandwhichbtn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
     }
 
-/*Meny når hamburger-meny ikke er klikt på*/
-#nav-check:not(:checked) + .nav-links {
-    height: 0px;
-  }
+    .nav-sandwhichbtn > label {
+        display: inline-block;
+        height: 83px;
+        padding: 10px 20px;
+        box-sizing: border-box;
+    }
 
-/*Meny når hamburger-meny har blitt klikt på. Inkluderer lenker til de ulike sidene*/
- #nav-check:checked + .nav-links {
-    height: calc(70vh - 100%);
-  }
+    .nav-sandwhichbtn > label:hover {
+        height: 83px;
+        background-color: #202020;
+    }
+
+    .nav-sandwhichbtn > label > span {
+        display: block;
+        width: 40px;
+        margin: 16px;
+        border-top: 6px solid #d9d9d9;
+        border-radius: 4px;
+    }
+
+    #navbar-discord-logo {
+        display: none;
+    }
+
+    .nav-links {
+        display: block;
+        width: 100%;
+        background-color: #353535;
+        transition: all 0.5s ease-in;
+        overflow-x: hidden;
+        left: 0px;
+        text-align: center;
+        z-index: 500;
+    }
+
+    .nav-links > a {
+        display: block;
+        width: 100%;
+        padding: 30px 0px;
+    }
+
+    .discord-link > a {
+        display: inline-block;
+        width: 100%;
+        text-decoration: none;
+        color: #d9d9d9;
+        padding: 30px 0px;
+        background-color: #1f293c;
+    }
+
+    #nav-check:checked + .nav-links {
+        display: block;
+        height: calc(37vh - 75px);
+        overflow-x: hidden;
+    }
+
+    @media (max-width: 600px) {
+        #navbar {
+            height: 80px;
+        }
+
+        .nav-title {
+            font-size: 11px;
+            padding: 10px 20px;
+        }
+    }
+
+    .nav-sandwhichbtn {
+        right: 8px;
+        top: 8px;
+    }
+
+    .nav-sandwhichbtn > label {
+        height: 80px;
+        padding: 0px;
+    }
+
+    .nav-sandwhichbtn > label:hover {
+        height: 80px;
+    }
+
+    /*Meny når hamburger-meny ikke er klikt på*/
+    #nav-check:not(:checked) + .nav-links {
+        height: 0px;
+    }
+
+    /*Meny når hamburger-meny har blitt klikt på. Inkluderer lenker til de ulike sidene*/
+    #nav-check:checked + .nav-links {
+        height: calc(70vh - 100%);
+    }
 }
-
 
 /*Front page styling*/
 #frontpage_welcome {
@@ -298,177 +295,179 @@ h2 {
 }
 
 #screeningsContainer {
-  padding-top: 20px;
-  max-width: 800px;
-  margin: auto;
-  font-size: x-large;
+    padding-top: 20px;
+    max-width: 800px;
+    margin: auto;
+    font-size: x-large;
 }
 
 .screeningContainer {
-  padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 .animeScreening {
-  position: relative;
-  max-width: 800px;
-  height: 120px;
-  margin: auto;
-  background-color: #1F293C;
-  margin-bottom: 5px;
-  align-content: center;
+    position: relative;
+    max-width: 800px;
+    height: 120px;
+    margin: auto;
+    background-color: #1f293c;
+    margin-bottom: 5px;
+    align-content: center;
 }
 
 .animeScreening > img {
-  height: 120px;
-  width: 85px;
-  float: left;
+    height: 120px;
+    width: 85px;
+    float: left;
 }
 
-.animeEpisodes { /* How on earth can I center this? */
-  margin: auto;
-  font-size: larger;
+.animeEpisodes {
+    /* How on earth can I center this? */
+    margin: auto;
+    font-size: larger;
 }
 
 *[onclick]:hover {
-  background-color: #202020;
+    background-color: #202020;
+    cursor: pointer;
 }
 
 /*Styling for voting-page*/
 #infobox {
-  width: 70%;
-  margin: auto;
+    width: 70%;
+    margin: auto;
 }
 
 .voting_wrapper {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
 .voting_container {
-  padding: 0;
+    padding: 0;
 }
 
 .voting_element {
-  width: 70%;
-  margin: auto;
-  padding: 10px;
-  background-color: #1f293c;
-  border: 1px solid #d9d9d9;
-  border-radius: 5px;
-  list-style: decimal;
-  cursor: move;
+    width: 70%;
+    margin: auto;
+    padding: 10px;
+    background-color: #1f293c;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    list-style: decimal;
+    cursor: move;
 }
 
 li:active {
-  opacity: 0.7;
+    opacity: 0.7;
 }
 
 .voting_button {
-  text-align: center;
+    text-align: center;
 }
 
 #voting_btn {
-  font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  padding: 10px;
-  background-color: #d9d9d9;
-  color: #1f293c;
-  border-radius: 6px;
+    font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
+    background-color: #d9d9d9;
+    color: #1f293c;
+    border-radius: 6px;
 }
 
 /*Newsfeed Styling*/
 .newsfeed_container {
-  width: 70%; 
-  margin: auto;
+    width: 70%;
+    margin: auto;
 }
 
 .newsfeed_title {
-  text-align: left; 
-  margin: 25px 0 0 0;
+    text-align: left;
+    margin: 25px 0 0 0;
 }
 
 .newsfeed_hr {
-  border-top: 2px solid #d9d9d9;
+    border-top: 2px solid #d9d9d9;
 }
 
 /*Signup Styling*/
 #signup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 #signupContainer {
-  position: fixed;
-  width: 23%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+    position: fixed;
+    width: 23%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 #signupHead {
-  background-color: #353535;
-  margin: 0;
-  padding: 10px;
-  border-radius: 20px 20px 0 0;
+    background-color: #353535;
+    margin: 0;
+    padding: 10px;
+    border-radius: 20px 20px 0 0;
 }
 
 #signupHeader {
-  text-align: center;
-  margin: 10px;
+    text-align: center;
+    margin: 10px;
 }
 
 #signupBody {
-  background-color: #1F293C;
-  margin: 0;
-  padding: 10px 0;
-  border-radius: 0 0 20px 20px;
+    background-color: #1f293c;
+    margin: 0;
+    padding: 10px 0;
+    border-radius: 0 0 20px 20px;
 }
 
 .inputContainer {
-  position: relative;
-  margin: auto;
-  margin: 70px 0;
-  text-align: center;
+    position: relative;
+    margin: auto;
+    margin: 70px 0;
+    text-align: center;
 }
 
 .signupIcon {
-  box-sizing: border-box;
-  position: absolute;
-  color: #353535 ;
-  height: 44px;
-  padding: 10px;
-  text-align: center;
+    box-sizing: border-box;
+    position: absolute;
+    color: #353535;
+    height: 44px;
+    padding: 10px;
+    text-align: center;
 }
 
 .inputBox {
-  box-sizing: border-box;
-  height: 44px;
-  padding: 10px;
-  width: 85%;
-  outline: none;
-  text-align: center;
+    box-sizing: border-box;
+    height: 44px;
+    padding: 10px;
+    width: 85%;
+    outline: none;
+    text-align: center;
 }
 
 #signupSubmit {
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 40px;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 40px;
 }
 
 #signupSuccessful {
-  display: inline-block;
-  padding: 10px 0;
+    display: inline-block;
+    padding: 10px 0;
 }
 
 #signupClose {
-  position: absolute;
-  color: #c4c4c4;
-  top: -5px;
-  right: -5px;
+    position: absolute;
+    color: #c4c4c4;
+    top: -5px;
+    right: -5px;
 }
