--- a/website/css/master.css
+++ b/website/css/master.css
@@ -31,6 +31,10 @@ h2 {
     margin-top: 50px;
 }
 
+a {
+    color: lightskyblue;
+}
+
 /*CSS for navbar*/
 #navbar {
     margin: 0;
@@ -215,6 +219,14 @@ h2 {
     margin-right: 70px;
 }
 
+#next_screening_header,
+#latest_news_header {
+    width: fit-content;
+    margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .author {
     float: right;
     font-style: italic;
@@ -388,6 +400,21 @@ li:active {
 }
 
 .newsfeed_hr {
+    border-top: 2px solid #d9d9d9;
+}
+
+/*About us Styling*/
+.about_container {
+    width: 70%;
+    margin: auto;
+}
+
+.about_container > h1 {
+    text-align: left;
+    margin: 25px 0 0 0;
+}
+
+.about_container > hr {
     border-top: 2px solid #d9d9d9;
 }
 
