--- a/website/css/master.css
+++ b/website/css/master.css
@@ -88,6 +88,22 @@ a {
     background-color: #202020;
 }
 
+.signup-link {
+  float: right;
+  padding: 28px 50px;
+}
+
+.membershipButton {
+  font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  padding: 0 10px;
+  border: 2px outset #202020;
+  border-radius: 6px;
+  box-shadow: 1px 2px #202020;
+  color: #d9d9d9;
+  background-color: #353535;
+}
+
 .discord-link > a {
     display: none;
 }
@@ -101,7 +117,7 @@ a {
     float: left;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1250px) {
     .nav-sandwhichbtn {
         display: inline-block;
         position: absolute;
@@ -112,19 +128,15 @@ a {
     .nav-sandwhichbtn > label {
         display: inline-block;
         height: 83px;
-        padding: 10px 20px;
+        padding: 0;
+        margin-right: 20px;
         box-sizing: border-box;
-    }
-
-    .nav-sandwhichbtn > label:hover {
-        height: 83px;
-        background-color: #202020;
     }
 
     .nav-sandwhichbtn > label > span {
         display: block;
         width: 40px;
-        margin: 16px;
+        margin: 12px;
         border-top: 6px solid #d9d9d9;
         border-radius: 4px;
     }
@@ -150,13 +162,34 @@ a {
         padding: 30px 0px;
     }
 
+    .signup-link {
+      display: block;
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      text-align: center;
+    }
+
+    .membershipButton {
+      width: 100%;
+      height: 100%;
+      padding: 30px 0px;
+      border: none;
+      border-radius: 0;
+      background-color: #7289da;
+    }
+
     .discord-link > a {
         display: inline-block;
         width: 100%;
         text-decoration: none;
         color: #d9d9d9;
         padding: 30px 0px;
-        background-color: #1f293c;
+        background-color: #7289da;
+    }
+
+    .discord-link > a:hover {
+      background-color: #202020;
     }
 
     #nav-check:checked + .nav-links {
@@ -186,10 +219,6 @@ a {
         padding: 0px;
     }
 
-    .nav-sandwhichbtn > label:hover {
-        height: 80px;
-    }
-
     /*Meny når hamburger-meny ikke er klikt på*/
     #nav-check:not(:checked) + .nav-links {
         height: 0px;
@@ -200,6 +229,7 @@ a {
         height: calc(70vh - 100%);
     }
 }
+
 
 /*Front page styling*/
 .frontpage_container {
@@ -367,46 +397,46 @@ a {
 
 /*Styling for voting-page*/
 #infobox {
-    width: 70%;
-    margin: auto;
+  width: 70%;
+  margin: auto;
 }
 
 .voting_wrapper {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .voting_container {
-    padding: 0;
+  padding: 0;
 }
 
 .voting_element {
-    width: 70%;
-    margin: auto;
-    padding: 10px;
-    background-color: #1f293c;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    list-style: decimal;
-    cursor: move;
+  width: 70%;
+  margin: auto;
+  padding: 10px;
+  background-color: #1f293c;
+  border: 1px solid #d9d9d9;
+  border-radius: 5px;
+  list-style: decimal;
+  cursor: move;
 }
 
 li:active {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .voting_button {
-    text-align: center;
+  text-align: center;
 }
 
 #voting_btn {
-    font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px;
-    background-color: #d9d9d9;
-    color: #1f293c;
-    border-radius: 6px;
+  font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  background-color: #d9d9d9;
+  color: #1f293c;
+  border-radius: 6px;
 }
 
 /*Newsfeed Styling*/
