--- a/website/css/master.css
+++ b/website/css/master.css
@@ -29,6 +29,11 @@ h2 {
     text-align: center;
     font-size: 40px;
     margin-top: 50px;
+    margin-bottom: 0;
+}
+
+hr {
+    border-top: 2px solid #d9d9d9;
 }
 
 a {
@@ -101,106 +106,6 @@ a {
     float: left;
 }
 
-@media (max-width: 1100px) {
-    .nav-sandwhichbtn {
-        display: inline-block;
-        position: absolute;
-        right: 0px;
-        top: 0px;
-    }
-
-    .nav-sandwhichbtn > label {
-        display: inline-block;
-        height: 83px;
-        padding: 10px 20px;
-        box-sizing: border-box;
-    }
-
-    .nav-sandwhichbtn > label:hover {
-        height: 83px;
-        background-color: #202020;
-    }
-
-    .nav-sandwhichbtn > label > span {
-        display: block;
-        width: 40px;
-        margin: 16px;
-        border-top: 6px solid #d9d9d9;
-        border-radius: 4px;
-    }
-
-    #navbar-discord-logo {
-        display: none;
-    }
-
-    .nav-links {
-        display: block;
-        width: 100%;
-        background-color: #353535;
-        transition: all 0.5s ease-in;
-        overflow-x: hidden;
-        left: 0px;
-        text-align: center;
-        z-index: 500;
-    }
-
-    .nav-links > a {
-        display: block;
-        width: 100%;
-        padding: 30px 0px;
-    }
-
-    .discord-link > a {
-        display: inline-block;
-        width: 100%;
-        text-decoration: none;
-        color: #d9d9d9;
-        padding: 30px 0px;
-        background-color: #1f293c;
-    }
-
-    #nav-check:checked + .nav-links {
-        display: block;
-        height: calc(37vh - 75px);
-        overflow-x: hidden;
-    }
-
-    @media (max-width: 600px) {
-        #navbar {
-            height: 80px;
-        }
-
-        .nav-title {
-            font-size: 11px;
-            padding: 10px 20px;
-        }
-    }
-
-    .nav-sandwhichbtn {
-        right: 8px;
-        top: 8px;
-    }
-
-    .nav-sandwhichbtn > label {
-        height: 80px;
-        padding: 0px;
-    }
-
-    .nav-sandwhichbtn > label:hover {
-        height: 80px;
-    }
-
-    /*Meny når hamburger-meny ikke er klikt på*/
-    #nav-check:not(:checked) + .nav-links {
-        height: 0px;
-    }
-
-    /*Meny når hamburger-meny har blitt klikt på. Inkluderer lenker til de ulike sidene*/
-    #nav-check:checked + .nav-links {
-        height: calc(70vh - 100%);
-    }
-}
-
 /*Front page styling*/
 .frontpage_container {
     width: 100%;
@@ -211,7 +116,7 @@ a {
 
 #frontpage_welcome {
     width: 70%;
-    /*margin: auto;*/
+    /*margin: 0 auto;*/
 }
 
 #frontpage_news {
@@ -229,7 +134,6 @@ a {
 #next_screening_header,
 #latest_news_header {
     width: fit-content;
-    margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -274,6 +178,7 @@ a {
     border-radius: 0 0 20px 20px;
     display: flex;
     align-items: center;
+    min-width: 400px;
 }
 
 /*#popupThumbnail {
@@ -518,4 +423,120 @@ li:active {
     color: #c4c4c4;
     top: -5px;
     right: -5px;
+}
+
+@media (max-width: 1100px) {
+    .nav-sandwhichbtn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
+
+    .nav-sandwhichbtn > label {
+        display: inline-block;
+        height: 83px;
+        padding: 10px 20px;
+        box-sizing: border-box;
+    }
+
+    .nav-sandwhichbtn > label:hover {
+        height: 83px;
+        background-color: #202020;
+    }
+
+    .nav-sandwhichbtn > label > span {
+        display: block;
+        width: 40px;
+        margin: 16px;
+        border-top: 6px solid #d9d9d9;
+        border-radius: 4px;
+    }
+
+    #navbar-discord-logo {
+        display: none;
+    }
+
+    .nav-links {
+        display: block;
+        width: 100%;
+        background-color: #353535;
+        transition: all 0.5s ease-in;
+        overflow-x: hidden;
+        left: 0px;
+        text-align: center;
+        z-index: 500;
+    }
+
+    .nav-links > a {
+        display: block;
+        width: 100%;
+        padding: 30px 0px;
+    }
+
+    .discord-link > a {
+        display: inline-block;
+        width: 100%;
+        text-decoration: none;
+        color: #d9d9d9;
+        padding: 30px 0px;
+        background-color: #1f293c;
+    }
+
+    #nav-check:checked + .nav-links {
+        display: block;
+        height: calc(37vh - 75px);
+        overflow-x: hidden;
+    }
+
+    @media (max-width: 895px) {
+        .frontpage_container { /*make next screening appear below latest news*/
+            display: block;
+            flex-wrap: nowrap;
+            justify-content: center;
+            margin: 0 auto;
+        }
+
+        #frontpage_welcome,
+        #frontpage_news,
+        #frontpage_nextscreening { /*make next screening appear below latest news*/
+            width: 80%;
+            margin: 0 auto;
+        } 
+    }
+
+    @media (max-width: 600px) {
+        #navbar {
+            height: 80px;
+        }
+
+        .nav-title {
+            font-size: 11px;
+            padding: 10px 20px;
+        }
+    }
+
+    .nav-sandwhichbtn {
+        right: 8px;
+        top: 8px;
+    }
+
+    .nav-sandwhichbtn > label {
+        height: 80px;
+        padding: 0px;
+    }
+
+    .nav-sandwhichbtn > label:hover {
+        height: 80px;
+    }
+
+    /*Meny når hamburger-meny ikke er klikt på*/
+    #nav-check:not(:checked) + .nav-links {
+        height: 0px;
+    }
+
+    /*Meny når hamburger-meny har blitt klikt på. Inkluderer lenker til de ulike sidene*/
+    #nav-check:checked + .nav-links {
+        height: calc(70vh - 100%);
+    }
 }
