--- a/website/css/master.css
+++ b/website/css/master.css
@@ -256,7 +256,8 @@ a {
 }
 
 .screeningContainer {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
+    padding-top: 10px;
 }
 
 .animeScreening {
@@ -331,7 +332,7 @@ li:active {
 }
 
 /*Newsfeed Styling*/
-.newsfeed_container {
+#newsfeed_container {
     width: 70%;
     margin: auto;
 }
