The site is no longer dependent on the Google Font API

--- a/website/css/master.css
+++ b/website/css/master.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: "Open Sans";
+    src: url("../fonts/OpenSans-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("../fonts/OpenSans-Bold.ttf");
+    font-weight: bold;
+}
+
 html {
     margin: 0;
     padding: 0;
