--- a/website/css/master.css
+++ b/website/css/master.css
@@ -146,9 +146,9 @@ a:hover {
     background-color: #353535;
 }
 
-/*.discord-link > a {
+.discord-link > a {
     display: none;
-}*/
+}
 
 #nav-check {
     display: none;
@@ -531,18 +531,18 @@ li:active {
         background-color: #7289da;
     }
 
-    /*.discord-link > a {
+    .discord-link > a {
         display: inline-block;
         width: 100%;
         text-decoration: none;
         color: #d9d9d9;
         padding: 30px 0px;
         background-color: #7289da;
-    }*/
+    }
 
-    /*.discord-link > a:hover {
+    .discord-link > a:hover {
         background-color: #202020;
-    }*/
+    }
 
     /*Meny når hamburger-meny ikke er klikt på*/
     #nav-check:not(:checked) + .nav-links {
