--- a/website/css/master.css
+++ b/website/css/master.css
@@ -20,9 +20,8 @@ body {
     color: #d9d9d9;
     font-size: 20px;
     font-weight: 100;
-    margin: 0;
+    margin: 0 0 100px 0;
     overflow-y: scroll;
-    /*padding: 5%;*/
 }
 
 body::-webkit-scrollbar {
@@ -38,7 +37,7 @@ h2 {
 }
 
 hr {
-    border-top: 2px solid #d9d9d9;
+    border: 1px solid #d9d9d9;
 }
 
 a {
