--- a/website/css/master.css
+++ b/website/css/master.css
@@ -11,11 +11,6 @@ body {
     font-weight: 100;
     margin: 0;
     overflow-y: scroll;
-    /*padding: 5%;*/
-}
-
-body::-webkit-scrollbar {
-    display: none;
 }
 
 h1,
@@ -54,6 +49,22 @@ a {
     background-color: #1f293c;
     padding: 20px 40px;
     margin: 30px 0;
+}
+
+.button_container {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.button {
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  background-color: #d9d9d9;
+  color: #1f293c;
+  border-radius: 6px;
 }
 
 *[onclick]:hover {
@@ -201,7 +212,6 @@ a {
 /*Styling for voting-page*/
 .voting_wrapper {
   margin-top: 50px;
-  padding-bottom: 20px;
 }
 
 .voting_container {
@@ -221,21 +231,6 @@ a {
 
 li:active {
   opacity: 0.7;
-}
-
-.voting_button {
-  text-align: center;
-}
-
-#voting_btn {
-  font-family: inherit;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  padding: 10px;
-  background-color: #d9d9d9;
-  color: #1f293c;
-  border-radius: 6px;
 }
 
 /* Newsfeed Styling */
@@ -413,7 +408,7 @@ li:active {
 }
 
 /* Make the page dynamic */
-@media (max-width: 1250px) {
+@media (max-width: 1300px) {
     .nav-sandwhichbtn {
         display: inline-block;
         position: absolute;
