Centered text in signup completed

--- a/website/css/master.css
+++ b/website/css/master.css
@@ -334,6 +334,7 @@ li:active {
 #signupSuccessful {
     display: none;
     padding: 10px 0;
+    margin: auto;
 }
 
 #signupSuccessful .successText {
