--- a/website/css/master.css
+++ b/website/css/master.css
@@ -28,7 +28,7 @@ h1,
 h2 {
     text-align: center;
     font-size: 40px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 0;
 }
 
@@ -69,7 +69,7 @@ a:hover {
 .content {
     background-color: #1f293c;
     padding: 20px 40px;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 .button_container {
@@ -216,15 +216,15 @@ a:hover {
 }
 
 /* Screenings styling */
-#screenings_container {
+#screenings_container,
+#semester_container {
     min-width: 400px;
     font-size: x-large;
 }
 
 .screening_container {
     max-width: 800px;
-    padding-bottom: 5px;
-    padding-top: 10px;
+    padding-bottom: 10px;
     margin: auto;
 }
 
@@ -279,7 +279,7 @@ li:active {
 .news_content {
     background-color: #1f293c;
     padding: 20px 40px 40px;
-    margin: 30px 0;
+    margin: 20px 0 15px;
 }
 
 .author {
