Fixing html validation: part 4 (I think?)

--- a/website/css/master.css
+++ b/website/css/master.css
@@ -461,6 +461,10 @@ li:active {
         border-radius: 4px;
     }
 
+    .nav-sandwhichbtn span:hover {
+        cursor: pointer;
+    }
+
     #navbar-discord-logo {
         display: none;
     }
