--- a/website/css/master.css
+++ b/website/css/master.css
@@ -1,3 +1,4 @@
+/* Loading fonts */
 @font-face {
     font-family: "Open Sans";
     src: url("../fonts/OpenSans-Regular.ttf");
@@ -9,6 +10,7 @@
     font-weight: bold;
 }
 
+/* Universal styles */
 html {
     margin: 0;
     padding: 0;
@@ -70,11 +72,11 @@ section > .page_title {
     text-align: left;
 }
 
-/*.content {
+.info_content {
     background-color: #1f293c;
     padding: 20px 40px;
     margin: 30px 0;
-}*/
+}
 
 .button_container {
     text-align: center;
@@ -101,7 +103,7 @@ section > .page_title {
     cursor: pointer;
 }
 
-/* CSS for navbar */
+/* Styles for navbar */
 #navbar {
     margin: 0;
     height: 83px;
@@ -194,7 +196,7 @@ section > .page_title {
     opacity: 0.7;
 }
 
-/* Frontpage styling */
+/* Styles for frontpage */
 #frontpage_container {
     width: 100%;
     display: flex;
@@ -219,11 +221,10 @@ section > .page_title {
     padding-right: 3px;
 }
 
-/* Screenings styling */
+/* Styles for screenings */
 #screenings_container,
 #semester_container {
     min-width: 400px;
-    /*font-size: x-large;*/
 }
 
 .screening_container {
@@ -255,7 +256,7 @@ section > .page_title {
     transform: translateY(-50%);
 }
 
-/* Styling for voting-page */
+/* Styling for voting page */
 .voting_wrapper {
     margin-top: 50px;
 }
@@ -279,13 +280,7 @@ li:active {
     opacity: 0.7;
 }
 
-/* Newsfeed Styling */
-.info_content {
-    background-color: #1f293c;
-    padding: 20px 40px;
-    margin: 30px 0;
-}
-
+/* Styling for newsfeed */
 .author {
     display: inline-block;
     width: 100%;
@@ -293,12 +288,48 @@ li:active {
     font-style: italic;
 }
 
-/* About us styling */
-#contact_title {
-    text-align: left;
+/* General styles for popup */
+#popup,
+#signup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    z-index: 9999;
 }
 
-/* Signup styling */
+.popupHeader {
+    background-color: #353535;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+    border-radius: 20px 20px 0 0;
+}
+
+.popupHeader h3 {
+    margin: 0;
+}
+
+.popupContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.popupBody {
+    background-color: #0b1622;
+    padding: 60px 30px;
+    border-radius: 0 0 20px 20px;
+    display: flex;
+    align-items: center;
+    min-width: 400px;
+}
+
+/* Styles for the signup popup */
 #signupForm {
     width: 100%;
 }
@@ -347,47 +378,7 @@ li:active {
     color: #1c9b1c;
 }
 
-/* Popup styling */
-#popup,
-#signup {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: none;
-    z-index: 9999;
-}
-
-.popupHeader {
-    background-color: #353535;
-    margin: 0;
-    padding: 10px;
-    text-align: center;
-    border-radius: 20px 20px 0 0;
-}
-
-.popupHeader h3 {
-    margin: 0;
-}
-
-.popupContent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.popupBody {
-    background-color: #0b1622;
-    padding: 60px 30px;
-    border-radius: 0 0 20px 20px;
-    display: flex;
-    align-items: center;
-    min-width: 400px;
-}
-
+/* Styles for the synopsis popup */
 #popupThumbnail {
     height: 250px;
     float: left;
@@ -424,8 +415,9 @@ li:active {
     cursor: pointer;
 }
 
-/* Make the page dynamic */
+/* Make the page responsive */
 @media (max-width: 1280px) {
+    /* Styles for navbar responsiveness */
     .nav-header {
         display: block;
     }
@@ -506,7 +498,7 @@ li:active {
         background-color: #607ce0;
     }
 
-    /* Manu when hamburger has not been clicked */
+    /* Menu when hamburger has not been clicked */
     #nav-check:not(:checked) + .nav-links {
         display: none;
     }
