--- a/website/css/master.css
+++ b/website/css/master.css
@@ -20,7 +20,7 @@ body {
     font-family: "Open Sans", Verdana, Geneva, Tahoma, sans-serif;
     background-color: #0b1622;
     color: #d9d9d9;
-    font-size: 20px;
+    font-size: 1.2em;
     font-weight: 100;
     margin: 0 0 40px 0;
     overflow-y: scroll;
@@ -36,6 +36,7 @@ h2 {
 
 hr {
     border: 1px solid #d9d9d9;
+
 }
 
 a {
@@ -75,7 +76,7 @@ section > .page_title {
 .info_content {
     background-color: #1f293c;
     padding: 20px 40px;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 .button_container {
@@ -214,10 +215,9 @@ section > .page_title {
     min-width: 400px;
 }
 
-#latest_news_header,
-#next_screening_header {
-    width: fit-content;
-    padding-right: 3px;
+#latest_news_header > h2,
+#next_screening_header > h2 {
+    text-align: left;
 }
 
 /* Styles for screenings */
